--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "logseq-l10n": "^0.2.0",
     "marked": "^4.1.1",
     "preact": "^10.11.2",
+    "rambdax": "^8.1.0",
     "reactutils": "^5.12.0"
   },
   "devDependencies": {
