--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "logseq-plugin-smartsearch",
-  "version": "0.22.4",
+  "version": "0.23.0",
   "main": "dist/index.html",
   "logseq": {
     "id": "_sethyuan-logseq-smartsearch",
@@ -15,6 +15,7 @@
     "date-fns": "^2.29.3",
     "logseq-l10n": "^0.2.0",
     "marked": "^4.0.19",
+    "pinyin-pro": "^3.15.2",
     "preact": "^10.11.2",
     "rambdax": "^8.1.0",
     "reactutils": "^5.12.0"
